# Bio-Sim

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: Animal.rst  Land.rst  Simulation_island.rst  Tests.rst  conf.py  index.rst
examples/: mono_no_visual.py  mono_with_images.py  mono_with_log.py  mono_with_visual.py  sample_island.py
reference_examples/: check_sim.py
src/biosim/: __init__.py  island.py  simulation.py  visualization.py
src/biosim/animals/: animal.py  carnivore.py  herbivore.py
src/biosim/land/: desert.py  highland.py  land.py  lowland.py  water.py
tests/: test_simulation.py
tests/test_animals/: test_carnivore.py  test_herbivore.py
tests/test_islands/: test_island.py  test_migration.py
tests/test_lands/: test_desert.py  test_highland.py  test_lowland.py  test_water.py
