[metadata]
name = BioSim


version = attr: biosim.__version__
author = attr: biosim.__author__
author_email = attr: biosim.__email__

description = Rossumoya island simulation of animals.
long_description = file: README.md
long_description_content_type = text/markdown

url = https://gitlab.com/nmbu.no/emner/inf200/h2022/january-block-teams/a01_aditya_olutomi/biosim-a01-aditya-olutomi
project_urls =
    Bug Tracker =

license = MIT License

classifiers=
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Topic :: Education
    Programming Language :: Python

# More information about requirements
[options]
# Python version required
python_requires = >=3.10

# Other packages required (eg numpy, pandas, ...)
# Do NOT list packages from the Python Standard Library
#    https://docs.python.org/3.10/library/index.html
install_requires =
    numpy
    matplotlib
    scipy
# Which packages to include: tell packaging mechanism to search in src
package_dir =
    = src
packages = find:

# Scripts to also include in distribution package
#scripts =
#    examples/experiment_01.py
#    examples/experiment_02.py

# Tell package-finding mechanism where to search
[options.packages.find]
where = src

# Tell our PEP8 checker that we allow 100 character lines
[flake8]
max-line-length = 100